--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "614 ACM-W Supporting, celebrating, and advocating for professional women in computing in the Columbus, Ohio and Franklin County Area.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favico.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
