--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "614 ACM Webpage",
   "version": "0.1.0",
-  "homepage": "https://lexmw.github.io/Peaches-Conesessions/",
-  "private": true,
+  "homepage": "https://{username}.github.io/{repo-name}",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.4.0",
