--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "614 ACM Webpage",
-  "version": "0.1.0",
   "homepage": "https://lexmw.github.io/Peaches-Conesessions/",
+  "name": "614acmwwebpage",
+  "version": "0.1.0",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
