--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://lexmw.github.io/Peaches-Conesessions/",
   "name": "614acmwwebpage",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.4.0",
